Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • mutter mutter
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 1.2k
    • Issues 1.2k
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 137
    • Merge requests 137
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • muttermutter
  • Issues
  • #2553
Closed
Open
Issue created Dec 09, 2022 by Michael F@michael0x18

Mouse disappears when over windows that pop up when a menu is open

Moved from gnome-shell#6035 (closed)

Affected version

GNOME 42.5 Wayland on Fedora 36
Also affects GNOME 43.1 Wayland on Fedora 37
Issue does not appear to happen under Xorg

Bug summary

When a window opens while the mouse is over a menu, the mouse pointer will not be visible while it is over the window. This is a strange issue; a screen recording does not catch it. Thus, I have attached a video of the computer screen instead.

Steps to reproduce

  1. Open the menu in the upper right
  2. Open "Power Settings" or some other window using it
  3. Quickly, before the window can open, re-open the menu and mouse over one of the options
  4. wait for the window to open
  5. Mouse over it and note that the cursor disappears
  6. It make take a few tries; it doesn't happen 100% of the time
  7. The cursor may also get "stuck" in the wrong state

What happened

Cursor vanishes

What did you expect to happen

Cursor remains visible

Relevant logs, screenshots, screencasts etc.

VID_20221103_095226840

Assignee
Assign to
Time tracking